fix button, hide progress on mobile

--- a/ui/src/index.css
+++ b/ui/src/index.css
@@ -12,6 +12,7 @@ code {
     monospace;
 }
 
-.radio-player .audio-main {
+.radio-player .audio-main, 
+.radio-player .react-jinke-music-player-mobile-progress {
   display: none !important;
 }
